# crypto-ws

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
app/: api.py  client.py  config.py  connections.py  crud.py  database.py  main.py  models.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: c2828067c33b_added_the_price_changes_table.py
